Now specifies unique names to account for data files that might list each visit by the same person separately

--- a/repeat_visitors.ipynb
+++ b/repeat_visitors.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "be7c45b6",
+   "id": "21c95774",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,8 +14,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "3f7a6d3c",
+   "execution_count": 2,
+   "id": "07336043",
    "metadata": {},
    "outputs": [
     {
@@ -69,8 +69,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "5957dee0",
+   "execution_count": 3,
+   "id": "6b0252d1",
    "metadata": {},
    "outputs": [
     {
@@ -90,19 +90,29 @@
        "Name: Lookup ID, Length: 2896, dtype: bool"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ay23_24['Lookup ID'].isin(ay22_23['Lookup ID'].tolist())"
+    "ay23_24['Lookup ID'].isin(ay22_23['Lookup ID'].unique().tolist())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "e0ea46d1",
+   "execution_count": 4,
+   "id": "e7c205b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "repeats = ay23_24[ay23_24['Lookup ID'].isin(ay22_23['Lookup ID'].unique().tolist())]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3a2c8cc6",
    "metadata": {},
    "outputs": [
     {
@@ -111,19 +121,19 @@
        "655"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sum(ay23_24['Lookup ID'].isin(ay22_23['Lookup ID'].tolist()))"
+    "len(repeats['Lookup ID'].unique())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8195d9bc",
+   "id": "e23258fc",
    "metadata": {},
    "outputs": [],
    "source": []
